Fixed alignment for some images

--- a/css/events.css
+++ b/css/events.css
@@ -26,7 +26,10 @@
 }
 
 .event-img-sm img {
+  display: block;
   margin-top: 50px;
   margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
   width: 80%;
 }
